// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> with label and error should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 1px solid red;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  padding: 0 0.35rem;
  width: 100%;
}

.c1 {
  font-size: 1rem;
  line-height: 2rem;
}

.c3 {
  color: red;
  font-size: 0.85rem;
  margin-top: 5px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor={undefined}
  >
    Label 1
  </label>
  <input
    className="c2"
    id={undefined}
  />
  <div
    className="c3"
  >
    Error 1
  </div>
</div>
`;

exports[`<Input /> without label and error should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 1px solid #dddddd;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  padding: 0 0.35rem;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    id={undefined}
  />
</div>
`;
